[gd_scene load_steps=7 format=3 uid="uid://dqulto7dh603m"]

[ext_resource type="Script" uid="uid://dy8u7c0iptdc7" path="res://Game/GameMultiplayerManager/GameMultiplayerManager.gd" id="1_b54r1"]
[ext_resource type="PackedScene" uid="uid://cthvlothu3xns" path="res://Game/Game/Game.tscn" id="2_xwe6p"]
[ext_resource type="PackedScene" uid="uid://cgr4vchl0dplw" path="res://Game/GameMultiplayerManager/WaitToStartContainer.tscn" id="3_lv0co"]
[ext_resource type="PackedScene" uid="uid://btn0ymh0g1p48" path="res://Game/Game/RoundOverScreen.tscn" id="3_s3r1r"]
[ext_resource type="Theme" uid="uid://ctil2r685jdhw" path="res://Game/GameMultiplayerManager/player_info_label_theme.tres" id="5_ho6pe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ho6pe"]
bg_color = Color(0, 0.6, 0.85882354, 1)

[node name="GameMultiplayerManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b54r1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ho6pe")

[node name="GameContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Game" parent="GameContainer" instance=ExtResource("2_xwe6p")]
unique_name_in_owner = true
layout_mode = 2

[node name="WaitToStartContainer" parent="." instance=ExtResource("3_lv0co")]
unique_name_in_owner = true
layout_mode = 1

[node name="PlayerIdentifier" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.5
offset_top = -23.0
offset_right = 79.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Player N - Username"

[node name="RoundOverScreen" parent="." instance=ExtResource("3_s3r1r")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="TopBarContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="PlayerNamesSmall" type="GridContainer" parent="TopBarContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_ho6pe")
columns = 4

[node name="PlayerNamesExpanded" type="GridContainer" parent="TopBarContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_ho6pe")
columns = 4

[connection signal="draw_card" from="GameContainer/Game" to="." method="_on_game_draw_card"]
[connection signal="end_turn" from="GameContainer/Game" to="." method="_on_game_end_turn"]
[connection signal="start_game" from="WaitToStartContainer" to="." method="_on_start_button_pressed"]
[connection signal="ready_round_end" from="RoundOverScreen" to="." method="_on_round_over_screen_ready_round_end"]
